{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 162,
  "lineage": "696e705f-549b-842e-3ea2-c39ce7bf50b4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08d4ac5b634553e16",
            "arn": "arn:aws:ec2:us-east-1:115717770171:instance/i-07419bea10a19d6d5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-07419bea10a19d6d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d4bc55e3d9847f38",
            "private_dns": "ip-10-0-4-165.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.165",
            "public_dns": "ec2-3-236-27-39.compute-1.amazonaws.com",
            "public_ip": "3.236.27.39",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-065955800a6840d25",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b631ec37bafb4cd6",
            "tags": {
              "Name": "Deployment"
            },
            "tags_all": {
              "Name": "Deployment"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "terraform"
            },
            "vpc_security_group_ids": [
              "sg-005a4baa7f590e5cf"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2role",
            "aws_security_group.allow",
            "aws_subnet.mysubnet1",
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115717770171:internet-gateway/igw-05eb11cb532e17d6d",
            "id": "igw-05eb11cb532e17d6d",
            "owner_id": "115717770171",
            "tags": {
              "Name": "mygateway"
            },
            "tags_all": {
              "Name": "mygateway"
            },
            "vpc_id": "vpc-007a36ce9ae616bce"
          },
          "dependencies": [
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:115717770171:loadbalancer/app/Mylb/4829effa1aa19019",
            "arn_suffix": "app/Mylb/4829effa1aa19019",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Mylb-199635762.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:115717770171:loadbalancer/app/Mylb/4829effa1aa19019",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Mylb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-005a4baa7f590e5cf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b631ec37bafb4cd6"
              },
              {
                "subnet_id": "subnet-0beba3b150e83d77e"
              }
            ],
            "subnets": [
              "subnet-0b631ec37bafb4cd6",
              "subnet-0beba3b150e83d77e"
            ],
            "tags": {
              "Name": "Mylb"
            },
            "tags_all": {
              "Name": "Mylb"
            },
            "vpc_id": "vpc-007a36ce9ae616bce",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.allow",
            "aws_subnet.mysubnet1",
            "aws_subnet.mysubnet2",
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "LG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:115717770171:listener/app/Mylb/4829effa1aa19019/eee5f6ae1e4708a1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:115717770171:targetgroup/TG/b76a43fdd3ad19d7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:115717770171:listener/app/Mylb/4829effa1aa19019/eee5f6ae1e4708a1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:115717770171:loadbalancer/app/Mylb/4829effa1aa19019",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.test",
            "aws_lb_target_group.TG",
            "aws_security_group.allow",
            "aws_subnet.mysubnet1",
            "aws_subnet.mysubnet2",
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:115717770171:targetgroup/TG/b76a43fdd3ad19d7",
            "arn_suffix": "targetgroup/TG/b76a43fdd3ad19d7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:115717770171:targetgroup/TG/b76a43fdd3ad19d7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-007a36ce9ae616bce"
          },
          "dependencies": [
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "apache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:115717770171:targetgroup/TG/b76a43fdd3ad19d7-20220809042513133800000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:115717770171:targetgroup/TG/b76a43fdd3ad19d7",
            "target_id": "i-07419bea10a19d6d5"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2role",
            "aws_instance.host",
            "aws_lb_target_group.TG",
            "aws_security_group.allow",
            "aws_subnet.mysubnet1",
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shubham",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115717770171:route-table/rtb-0ad0bbcaa2957bfbf",
            "id": "rtb-0ad0bbcaa2957bfbf",
            "owner_id": "115717770171",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05eb11cb532e17d6d",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05eb11cb532e17d6d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shubham"
            },
            "tags_all": {
              "Name": "shubham"
            },
            "timeouts": null,
            "vpc_id": "vpc-007a36ce9ae616bce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057d4f4902de6763b",
            "route_table_id": "rtb-0ad0bbcaa2957bfbf",
            "subnet_id": "subnet-0b631ec37bafb4cd6"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.shubham",
            "aws_subnet.mysubnet1",
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115717770171:security-group/sg-005a4baa7f590e5cf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005a4baa7f590e5cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5050,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5050
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow",
            "name_prefix": "",
            "owner_id": "115717770171",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow"
            },
            "tags_all": {
              "Name": "allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-007a36ce9ae616bce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115717770171:subnet/subnet-0b631ec37bafb4cd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b631ec37bafb4cd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "115717770171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mysubnet"
            },
            "tags_all": {
              "Name": "mysubnet"
            },
            "vpc_id": "vpc-007a36ce9ae616bce"
          },
          "dependencies": [
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115717770171:subnet/subnet-0beba3b150e83d77e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0beba3b150e83d77e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "115717770171",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mysubnet"
            },
            "tags_all": {
              "Name": "mysubnet"
            },
            "vpc_id": "vpc-007a36ce9ae616bce"
          },
          "dependencies": [
            "aws_vpc.shubvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shubvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115717770171:vpc/vpc-007a36ce9ae616bce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e0b46328d2a7864f",
            "default_route_table_id": "rtb-0c33620e717fa5b7c",
            "default_security_group_id": "sg-0c150e56cbecc53a1",
            "dhcp_options_id": "dopt-041b4742d6992d835",
            "enable_classiclink": true,
            "enable_classiclink_dns_support": true,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-007a36ce9ae616bce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c33620e717fa5b7c",
            "owner_id": "115717770171",
            "tags": {
              "Name": "teraform"
            },
            "tags_all": {
              "Name": "teraform"
            }
          }
        }
      ]
    }
  ]
}